<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:stretchColumns="0,1,2"
    tools:context="com.example.hudmetricsclient.AltitudeActivity" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/Current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Current"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/Previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Previous"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/PressureAlt"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#c27427" />

        <TextView
            android:id="@+id/AltitudePressureCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/DASH"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/AltitutdePressurePrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/DASH"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/CalibratedAlt"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#c27427" />

        <TextView
            android:id="@+id/AltitudeCalibratedCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/DASH"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/AltitudeCalibratedPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/DASH"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/DeltaAlt"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#c27427" />

        <TextView
            android:id="@+id/AltitudeDeltaCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/DASH"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/AltitudeDeltaPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/DASH"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

</TableLayout>
